# CppPythonShmDemo

./: README.md
shm_demo_cpp/: CMakeLists.txt  main.cpp  shared_memory_tool.h
shm_demo_python/: c_structs.py  image_receiver.py  main.py  requirements.txt
